sample-config.yml

apiVersion: v1
kind: Pod
metadata:
  name: volume-test
spec:
  containers:
  - image: alpine
    name: alpine
    command: ["tail", "-f", "/dev/null"]
    volumeMounts:
    - name: cm-volume
      mountPath: /config
  volumes:
  - name: cm-volume
    configMap:
      name: sample-config
  terminationGracePeriodSeconds: 0

---

apiVersion: v1
kind: Pod
metadata:
  name: volume-test2
spec:
  containers:
  - image: alpine
    name: alpine
    command: ["tail", "-f", "/dev/null"]
  terminationGracePeriodSeconds: 0

# ConfigMapやSecretはアプリケーションの設定やクレデンシャルをコンテナイメージから分離するために使われる。
# ConfigMapの値は、Volumeにマウントしたり、環境変数として利用できる。
