sample-deployment.yml
# Deploymentは、PodのRollingUpdate, Rolloutの履歴保持、Rollbackが主な役割。
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-d-test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-d-test
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0%
  template:
    metadata:
      labels:
        app: nginx-d-test
    spec:
      containers:
      - image: nginx:alpine
        name: nginx-d-container
# strategyはRecreate(全削除からの作り直し)とRolling Update(徐々にUpdateを適応)の２種類がある。
# RollingUpdate : maxSurge = 複製数をどれくらい超過していいか maxUnavailable = 複製中に無効なPodをどれくらい許容するか。
