sample-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name : sample-pod
spec :
  containers:
    - name : nginx
      image : nginx:1.13
