sample-multi-resource-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name : order1-deployment
spec :
  replicas: 3
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name : nginx-container
          image : nginx:1.13
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: order2-service
spec:
  type: LoadBalancer
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 80
  selector:
    app: sample-app
