sample-np.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-np
spec:
  selector:
    app: nginx-d-test
  ports:
  - port: 80
  type: NodePort
