sample-service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-s-test
  labels:
    app: nginx-s-test
spec:
  selector:
    app: nginx-d-test
  ports:
  - port: 80


# Serviceのselectorは、deploymentを指定する。LabelSelectorでselectしている。
# ServiceはLoadBalancerとかNorPortとか色々な形がある。 https://cstoku.dev/posts/2018/k8sdojo-09/
# k8sにDNSコンポーネントが入っていれば、サービス名からサービスIpアドレスに接続できる。
