sample-statefulset.yml
apiVersion: v1
kind: Service
metadata:
  name: stateful
spec:
  clusterIP: None
  selector:
    app: stateful

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: stateful
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateful
  serviceName: stateful
  template:
    metadata:
      labels:
        app: stateful
    spec:
      containers:
      - image: alpine
        name: stateful
        command: ["sh", "-c"]
        args:
        - |
          trap 'exit' SIGTERM
          touch /data/hostname
          while true; do
            echo "`date`: `hostname`" >> /data/hostname
            sleep 3
          done
        volumeMounts:
        - name: data
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 64Mi
